fix compability tests